# arcade-platformer

./: .gitignore  Platformer.tiled-session  arcade_platformer.tmx  arcade_platformer.tsj  capstone_game.py  constants.py  enemies.py  enemies.tsj  entity.py  game.py  heart.py  helpers.py  platformer_level_2.json  platformer_level_3.json  player.py  pyproject.toml  readme.md  requirements.txt  win_views.py
assets/levels/: arcade_platformer.tsj  interactive_platforms.tsj  platformer_level_1.json  platformer_level_2.json  platformer_level_3.json  platformer_level_4.json  platformer_level_5.json
